# Gwen-tts-gui

./: .gitignore  README.md  gui_srt_to_speech.py  inference.py  pyproject.toml  requirements.txt  srt_to_speech.py  srt_utils.py  test.py
data/: infer_info.json  ref_info.json
