[project]
name = "gwen-tts"
version = "0.1.0"
description = "Natural Vietnamese Voice Cloning - Finetuned from Qwen3-TTS-0.6B"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "qwen-tts>=0.1.1",
    "torch>=2.5.0",
    "torchaudio>=2.5.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }

